--- a/spa/src/app/users/users.component.html
+++ b/spa/src/app/users/users.component.html
@@ -11,29 +11,45 @@
               
             <div class="mat-elevation-z8">
                 <table mat-table [dataSource]="dataSource" matSort class="w-100">
-                
-                    <!-- ID Column -->
-                    <ng-container matColumnDef="id">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                    <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-                    </ng-container>
-                
-                    <!-- Progress Column -->
-                    <ng-container matColumnDef="progress">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-                    <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
-                    </ng-container>
-                
-                    <!-- Name Column -->
+
                     <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
                     <td mat-cell *matCellDef="let row"> {{row.name}} </td>
                     </ng-container>
                 
-                    <!-- Fruit Column -->
-                    <ng-container matColumnDef="fruit">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
-                    <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
+                    <ng-container matColumnDef="gender">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
+                    <td mat-cell *matCellDef="let row"> {{row.gender}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="location">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Location </th>
+                    <td mat-cell *matCellDef="let row"> {{row.location}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="email">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> E-mail </th>
+                    <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="age">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Age </th>
+                    <td mat-cell *matCellDef="let row"> {{row.age}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="registration">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Registration </th>
+                    <td mat-cell *matCellDef="let row"> {{row.registration}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="phone">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone </th>
+                    <td mat-cell *matCellDef="let row"> {{row.phone}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="picture">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Picture </th>
+                    <td mat-cell *matCellDef="let row"> {{row.picture}} </td>
                     </ng-container>
                 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -44,8 +60,12 @@
                     <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
                     </tr>
                 </table>
-                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users" (page)="pageChange($event)"></mat-paginator>
             </div>
+        </div>
+        <div class="col-12">
+            <button mat-raised-button color="primary" (click)="csv()">CSV</button>
+            <button mat-raised-button color="secondary" (click)="xml()">XML</button>
         </div>
     </div>
 </div>
