feature: add header/footer | quality of life fixes on js | improvements on get data from API

--- a/spa/src/app/app.component.html
+++ b/spa/src/app/app.component.html
@@ -1,2 +1,69 @@
-
+<header id="header">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="container px-0 px-md-4">
+                    <div class="row">
+                        <div class="col-12">
+                            <nav class="navbar navbar-expand-lg navbar-light">
+                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                                  <span class="navbar-toggler-icon"></span>
+                                </button>
+                                <div class="collapse navbar-collapse justify-content-between mt-3 mt-md-0" id="navbarToggler">
+                                  <a href="https://www.jumia.com.ng/" target="_blank">
+                                    <img class="logo" src="https://www.freelogovectors.net/wp-content/uploads/2022/04/jumia_logo_freelogovectors.net_.png" alt="Jumia Logo" >
+                                  </a>
+                                  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                                    <li class="nav-item active">
+                                      <a class="nav-link " href="#">Example</a>
+                                    </li>
+                                    <li class="nav-item active">
+                                      <a class="nav-link " href="#">Example 2</a>
+                                    </li>
+                                    <li class="nav-item active">
+                                      <a class="nav-link " href="#">Example 3</a>
+                                    </li>
+                                    <li class="nav-item active">
+                                      <a class="nav-link " href="#">Example 4</a>
+                                    </li>
+                                  </ul>
+                                  <form class="form-inline my-2 my-lg-0 d-flex">
+                                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                                  </form>
+                                </div>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 <router-outlet></router-outlet>
+<footer id="footer" class="mt-4">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="container">
+                    <div class="row pt-4 infos">
+                        <div class="col-12 col-md-4 info">
+                            <img src="https://techinporto.com/archive/2017/img/Jumia_Group_Logo_white.png" alt="Jumia White Logo" width="100px">
+                        </div>
+                        <div class="col-12 col-md-4 my-3 my-md-0 info d-flex flex-column">
+                            <b class="mb-1">Map</b>
+                            <a href="#">Link example</a>
+                            <a href="#">Link example</a>
+                            <a href="#">Link example</a>
+                            <a href="#">Link example</a>
+                        </div>
+                        <div class="col-12 col-md-4 info d-flex flex-column">
+                            <b class="mb-1">About</b>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
