--- a/spa/src/app/users/users.component.html
+++ b/spa/src/app/users/users.component.html
@@ -1,20 +1,21 @@
 <div class="container">
     <div class="row">
-        <div class="col-12">
-            <h1>teste</h1>
+        <div class="col-12 mt-4">
+            <h1>Programming exercise</h1>
+            <p class="mb-0">By: <b><cite>Gustavo Rovelo</cite> - <a href="https://github.com/GustavoRovelo" target="_blank" class="github">Github</a> | <a href="https://www.linkedin.com/in/gustavo-rovelo/" target="_blank">Linkedin</a></b></p>
         </div>
-        <div class="col-12">
+        <div class="col-12 mb-3">
             <mat-form-field appearance="standard">
                <mat-label>Filter</mat-label>
                <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
             </mat-form-field>
               
-            <div class="mat-elevation-z8">
+            <div class="mat-elevation-z8 overflow-auto">
                 <table mat-table [dataSource]="dataSource" matSort class="w-100">
 
                     <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                    <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+                    <th mat-header-cell *matHeaderCellDef > Name </th>
+                    <td mat-cell *matCellDef="let row"> {{row.name.title}}. {{row.name.first}} {{row.name.last}} </td>
                     </ng-container>
                 
                     <ng-container matColumnDef="gender">
@@ -23,8 +24,8 @@
                     </ng-container>
 
                     <ng-container matColumnDef="location">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Location </th>
-                    <td mat-cell *matCellDef="let row"> {{row.location}} </td>
+                    <th mat-header-cell *matHeaderCellDef > Location </th>
+                    <td mat-cell *matCellDef="let row"> {{row.location.street.number}}, {{row.location.street.name}}, {{row.location.city}} - {{row.location.country}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="email">
@@ -32,14 +33,14 @@
                     <td mat-cell *matCellDef="let row"> {{row.email}} </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="age">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Age </th>
-                    <td mat-cell *matCellDef="let row"> {{row.age}} </td>
+                    <ng-container matColumnDef="dob.age">
+                    <th mat-header-cell *matHeaderCellDef > Age </th>
+                    <td mat-cell *matCellDef="let row"> {{row.dob.age}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="registration">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Registration </th>
-                    <td mat-cell *matCellDef="let row"> {{row.registration}} </td>
+                    <th mat-header-cell *matHeaderCellDef > Registration </th>
+                    <td mat-cell *matCellDef="let row"> {{row.registered.age}} years </td>
                     </ng-container>
 
                     <ng-container matColumnDef="phone">
@@ -49,13 +50,12 @@
 
                     <ng-container matColumnDef="picture">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Picture </th>
-                    <td mat-cell *matCellDef="let row"> {{row.picture}} </td>
+                    <td mat-cell *matCellDef="let row"> <img src="{{row.picture.medium}}"> </td>
                     </ng-container>
                 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 
-                    <!-- Row shown when there is no matching data. -->
                     <tr class="mat-row" *matNoDataRow>
                     <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
                     </tr>
